src/objects/SalesRefundHeader__c.object
<CustomObject>
    <fields>
        <fullName>Amount_payable_with_intreset__c</fullName>
        <label>Amount payable with intreset</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brokerage_to_be_recovered__c</fullName>
        <label>Brokerage to be recovered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_Charges__c</fullName>
        <label>Cancellation Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancellation_No__c</fullName>
        <label>Cancellation Txn No.</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interest_Payable__c</fullName>
        <label>Interest Payable</label>
        <picklist>
            <picklistValues>
                <fullName>%Per</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Credited__c</fullName>
        <label>Net Amount Credited</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Amount_Refunded__c</fullName>
        <label>Net Amount Refunded</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Project__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.Project_Unit__r.Unit_Status__c</field>
                <operation>equals</operation>
                <value>Cancelled</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SalesRefundHeaders (Opportunity)</relationshipLabel>
        <relationshipName>SalesRefundHeaders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartialPayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PartialPayment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partial_Refund_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partial Refund Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Project_Unit__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SalesRefundHeaders</relationshipLabel>
        <relationshipName>SalesRefundHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payable_Interest_Value__c</fullName>
        <label>Payable Interest Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PreviousRefundValue__c</fullName>
        <label>PreviousRefundValue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process_Date__c</fullName>
        <label>Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Unit</label>
        <referenceTo>Project_Unit__c</referenceTo>
        <relationshipLabel>SalesRefundHeaders</relationshipLabel>
        <relationshipName>SalesRefundHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>SalesRefundHeaders</relationshipLabel>
        <relationshipName>SalesRefundHeaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_making__c</fullName>
        <label>Reason for making</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Refund_Date__c</fullName>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Refund_Type_Name__c</fullName>
        <label>Refund Type Name</label>
        <picklist>
            <picklistValues>
                <fullName>Cancellation Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial Refund</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Refund_Type__c</fullName>
        <label>Refund Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unprocessed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Series_Code__c</fullName>
        <label>Series Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pending for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SalesRefundHeader</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>SalesRefundHeader Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesRefundHeaders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>